# k_devjson_protocol

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  k_devjson_protocol.cmake
include/: k_devjson_protocol.h
mock/: k_devjson_protocol_mock.c  k_devjson_protocol_mock.h
src/: k_devjson_protocol.c  k_devjson_protocol_priv.h
test/: CMakeLists.txt  k_devjson_protocol_test.cpp
